--- a/Invent-it/Invent-it.csproj
+++ b/Invent-it/Invent-it.csproj
@@ -46,10 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddWindow.cs">
+    <Compile Include="PartWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddWindow.Designer.cs" />
+    <Compile Include="PartWindow.Designer.cs">
+      <DependentUpon>PartWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="model\Inhouse.cs" />
     <Compile Include="model\Inventory.cs" />
     <Compile Include="MainWindow.cs">
@@ -62,12 +64,24 @@
     <Compile Include="model\Part.cs" />
     <Compile Include="model\Product.cs" />
     <Compile Include="model\Program.cs" />
+    <Compile Include="ProductWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProductWindow.Designer.cs">
+      <DependentUpon>ProductWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoundPanel.cs">
       <SubType>Component</SubType>
     </Compile>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PartWindow.resx">
+      <DependentUpon>PartWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductWindow.resx">
+      <DependentUpon>ProductWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
