--- a/Invent-it/Invent-it.csproj
+++ b/Invent-it/Invent-it.csproj
@@ -46,41 +46,42 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PartWindow.cs">
+    <Compile Include="Model\SimpleDataLoader.cs" />
+    <Compile Include="View\PartWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PartWindow.Designer.cs">
+    <Compile Include="View\PartWindow.Designer.cs">
       <DependentUpon>PartWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="model\Inhouse.cs" />
-    <Compile Include="model\Inventory.cs" />
-    <Compile Include="MainWindow.cs">
+    <Compile Include="Model\Inhouse.cs" />
+    <Compile Include="Model\Inventory.cs" />
+    <Compile Include="View\MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainWindow.Designer.cs">
+    <Compile Include="View\MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="model\Outsourced.cs" />
-    <Compile Include="model\Part.cs" />
-    <Compile Include="model\Product.cs" />
-    <Compile Include="model\Program.cs" />
-    <Compile Include="ProductWindow.cs">
+    <Compile Include="Model\Outsourced.cs" />
+    <Compile Include="Model\Part.cs" />
+    <Compile Include="Model\Product.cs" />
+    <Compile Include="Program.cs" />
+    <Compile Include="View\ProductWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ProductWindow.Designer.cs">
+    <Compile Include="View\ProductWindow.Designer.cs">
       <DependentUpon>ProductWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="model\RoundPanel.cs">
+    <Compile Include="Model\RoundPanel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <EmbeddedResource Include="MainWindow.resx">
+    <EmbeddedResource Include="View\MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PartWindow.resx">
+    <EmbeddedResource Include="View\PartWindow.resx">
       <DependentUpon>PartWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ProductWindow.resx">
+    <EmbeddedResource Include="View\ProductWindow.resx">
       <DependentUpon>ProductWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
