--- a/Invent-it/Invent-it.csproj
+++ b/Invent-it/Invent-it.csproj
@@ -94,6 +94,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="Properties\DataSources\Model.Part.datasource" />
+    <None Include="Properties\DataSources\Model.Product.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
