--- a/Invent-it/Invent-it.csproj
+++ b/Invent-it/Invent-it.csproj
@@ -46,42 +46,42 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\SimpleDataLoader.cs" />
-    <Compile Include="View\PartWindow.cs">
+    <Compile Include="Models\SimpleDataLoader.cs" />
+    <Compile Include="Views\PartWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\PartWindow.Designer.cs">
+    <Compile Include="Views\PartWindow.Designer.cs">
       <DependentUpon>PartWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\Inhouse.cs" />
-    <Compile Include="Model\Inventory.cs" />
-    <Compile Include="View\MainWindow.cs">
+    <Compile Include="Models\Inhouse.cs" />
+    <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Views\MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\MainWindow.Designer.cs">
+    <Compile Include="Views\MainWindow.Designer.cs">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\Outsourced.cs" />
-    <Compile Include="Model\Part.cs" />
-    <Compile Include="Model\Product.cs" />
+    <Compile Include="Models\Outsourced.cs" />
+    <Compile Include="Models\Part.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="View\ProductWindow.cs">
+    <Compile Include="Views\ProductWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\ProductWindow.Designer.cs">
+    <Compile Include="Views\ProductWindow.Designer.cs">
       <DependentUpon>ProductWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\RoundPanel.cs">
+    <Compile Include="Models\RoundPanel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <EmbeddedResource Include="View\MainWindow.resx">
+    <EmbeddedResource Include="Views\MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\PartWindow.resx">
+    <EmbeddedResource Include="Views\PartWindow.resx">
       <DependentUpon>PartWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\ProductWindow.resx">
+    <EmbeddedResource Include="Views\ProductWindow.resx">
       <DependentUpon>ProductWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
